<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <Button
        android:id="@+id/btn_actualizar"
        android:layout_width="350dp"
        android:layout_height="49dp"
        android:layout_marginBottom="200dp"
        android:backgroundTint="@color/azul_botones"
        android:text="@string/btn_Main_actualizar"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_leer"
        android:layout_width="350dp"
        android:layout_height="49dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/azul_botones"
        android:text="@string/btn_Main_leer"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_actualizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_agregar"
        android:layout_width="350dp"
        android:layout_height="49dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/azul_botones"
        android:text="@string/btn_Main_agregar"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_eliminar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_eliminar"
        android:layout_width="350dp"
        android:layout_height="49dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/azul_botones"
        android:text="@string/btn_Main_eliminar"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_leer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_main_inserteMatricula"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/txt_Main_inserteMatricula"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/btn_agregar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>