<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AgregarEditarActivity">

    <Button
        android:id="@+id/btn_act_agregarEditar"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/azul_botones"
        android:text="@string/btn_Act_agregar"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="32dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/lbl_act_matricula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_Act_matricula"
        android:textColor="@color/azul_botones"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/eT_act_matricula"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_Act_modelo"
        android:textColor="@color/azul_botones"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_act_modelo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eT_act_matricula" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_Act_color"
        android:textColor="@color/azul_botones"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_act_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_act_modelo"
        app:layout_constraintVertical_bias="0.526" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_Act_anio"
        android:textColor="@color/azul_botones"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_act_anio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_act_color"
        app:layout_constraintVertical_bias="0.486" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_Act_precio"
        android:textColor="@color/azul_botones"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_act_precio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_act_anio"
        app:layout_constraintVertical_bias="0.486" />

    <EditText
        android:id="@+id/eT_act_matricula"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:ems="10"
        android:hint="@string/lbl_Act_matricula"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/et_act_modelo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_act_modelo"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:ems="10"
        android:hint="@string/lbl_Act_modelo"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/et_act_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_act_color"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:ems="10"
        android:hint="@string/lbl_Act_color"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/et_act_anio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_act_anio"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:ems="10"
        android:hint="@string/lbl_Act_anio"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/et_act_precio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_act_precio"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:hint="@string/lbl_Act_precio"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/btn_act_agregarEditar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>